# gen2act

./: .gitignore  C28_CAMERA_FIX_VALIDATION.md  C28_DATASET_CAMERA_ISSUE.md  C30_CORRECTED_EVAL.md  EXPERIMENTS.md  EXPERIMENTS_SUMMARY.md  HANDOFF.md  README.md  pyproject.toml
configs/: debug_smoke.yaml  droid100new_future5_delta_6dof_regression_proprio_frozen_dinov2_aug50.yaml  droid150_dinov2.yaml  droid150_dinov2_quick.yaml  droid150_frozen_dinov2_debug.yaml  droid150_smoke.yaml  droid150_xyz_frozen_dinov2_debug.yaml  droid150_xyz_proprio_frozen_dinov2_debug.yaml  droid150_xyz_regression_frozen_dinov2_debug.yaml  droid150_xyz_regression_proprio_frozen_dinov2_debug.yaml  droid150_xyz_regression_proprio_only_debug.yaml  droid2000new_future5_chunk4_pose6d_cls256_qpos_ft4dinov2_latent128_aug50.yaml  droid2000new_future5_chunk4_pose6d_regression_qpos_ft4dinov2_latent128_aug50.yaml  droid2000new_future5_chunk4_pose6d_regression_qpos_ft4dinov2_latent128_srcfuture.yaml  droid2000new_future5_delta_6dof_regression_qpos_frozen_dinov2_aug50.yaml  droid2000new_future5_delta_pose6d_regression_qpos_frozen_dinov2_100m_aug50.yaml  droid_full_delta_xyz_regression_proprio_only_jitter50.yaml  droid_full_future5_delta_xyz_regression_frozen_dinov2_aug50.yaml  droid_full_future5_delta_xyz_regression_proprio_frozen_dinov2_aug50.yaml  droid_full_future5_delta_xyz_regression_proprio_only_jitter50.yaml  droid_full_xyz_regression_frozen_dinov2_aug10.yaml  droid_full_xyz_regression_proprio_frozen_dinov2_aug10.yaml  droid_full_xyz_regression_proprio_only_jitter10.yaml  droidex2000_C13ext_ep30.yaml  (+94 more)
(+106 files in other folders)
